--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^17.0.2",
     "react-owl-carousel": "^2.3.3",
     "react-responsive": "^8.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-text-transition": "^1.3.0",
     "web-vitals": "^1.1.2"
   },
